--- a/FamilyBudget/Views/Modal/AddCharge.cshtml
+++ b/FamilyBudget/Views/Modal/AddCharge.cshtml
@@ -1,7 +1,7 @@
 ﻿@model FamilyBudget.ModalViewModels.AddChargeModel
 
 @{
-    ViewData["Title"] = "AddCategoryCharge";
+    ViewData["Title"] = "AddCharge";
 }
 
 <div class="modal-content">
