--- a/FamilyBudget/Views/Modal/AddIncome.cshtml
+++ b/FamilyBudget/Views/Modal/AddIncome.cshtml
@@ -1,7 +1,7 @@
 ﻿@model FamilyBudget.ModalViewModels.AddIncomeModel
 
 @{
-    ViewData["Title"] = "AddCategoryIncome";
+    ViewData["Title"] = "AddIncome";
 }
 
 <div class="modal-content">
